# walkie-ros

./: .gitignore  .gitmodules  .tmuxp.yaml  CLAUDE.md  LICENSE  README.md
bringup/: CMakeLists.txt  package.xml  pyproject.toml
bringup/config/camera/: d415_bottom_self_filter.yaml  zed2i.yaml  zed2i_self_filter.yaml
bringup/config/lidar/: dual_lidar_config.yml  unitree_self_filter.yaml
bringup/config/rviz/: default.rviz  octomap.rviz  openarm_read.rviz
bringup/config/twist_mux/: twist_mux.yml
bringup/launch/: dual_lidar_hokuyo_lakibeam.launch.py  isaac_omnibot.launch.py  lift_homing.launch.py  nav_sim_omnibot.launch.py  octomap_3d_mapping.launch.py  openarm_joint_state_reader.launch.py  real_omnibot.launch.py  real_omnibot_depth.launch.py  real_omnibot_depth_humanfollow.launch.py  robot_state_publisher.launch.py  test_zed.launch.py
bringup/scripts/: head_touch_beep_node.py  lift_homing_mock_node.py  lift_homing_node.py  openarm_joint_state_reader.py  readme.md  zed_watchdog copy.py  zed_watchdog.py
bringup/udev/: 99-zed-usb-reset.rules
manipulate/arm_description/: CMakeLists.txt  package.xml
manipulate/arm_description/config/: hardware_layout.yaml
manipulate/arm_description/config/ros2_controller/: dual_moveit_controllers.yaml  real_controllers.yaml  ros2_controllers.yaml  sim_controllers.yaml
manipulate/arm_description/launch/: test.launch.py
manipulate/arm_description/robots/: dual-walkie-arm.urdf.xacro  left-walkie-arm.urdf.xacro
manipulate/arm_description/rviz/: robot_preview.rviz
manipulate/arm_description/urdf/: color.xacro
manipulate/arm_description/urdf/walkie/: dual_arm_ros2_control.xacro  left_arm_ros2_control.xacro
manipulate/arm_description/urdf/walkie-arm/: walkie_arm.urdf.xacro
manipulate/arm_description/urdf/walkie-gripper/: walkie_gripper.urdf.xacro
manipulate/left_arm_commander_cpp/: CMakeLists.txt  package.xml
manipulate/left_arm_commander_cpp/launch/: commander.launch.py  isaac_commander.launch.py  vision_commander.launch.py
manipulate/left_arm_commander_cpp/src/: commander_isaac.cpp  commander_template.cpp  commander_vision.cpp  test_moveit.cpp
manipulate/openarm_bimanual_commander_cpp/: CMakeLists.txt  README.md  package.xml
manipulate/openarm_bimanual_commander_cpp/launch/: commander.launch.py  pick_and_place_isaac.launch.py
manipulate/openarm_bimanual_commander_cpp/src/: commander_benchmark.py  commander_interactive.py  commander_template.cpp  pick_and_place_isaac.cpp  pick_and_place_isaac2.cpp  save_named_constraint.cpp
manipulate/walkie_ik_servo/: CMakeLists.txt  package.xml
manipulate/walkie_ik_servo/config/: ik_params.yaml
manipulate/walkie_ik_servo/launch/: ik_servo.launch.py
manipulate/walkie_ik_servo/urdf/: gz_walkie_1arm.urdf
manipulate/walkie_ik_servo/walkie_ik_servo/: __init__.py  ik_servo_node.py  ik_solver.py  test_circle_pose.py  test_collision_ik.py  test_ik_simple.py  weighted_moving_filter.py
perception/: .gitignore  CMakeLists.txt  README.md  package.xml  pyproject.toml  setup_env.sh
perception/config/: test_params.yaml
perception/perception/: grasp_client.py  grasp_from_cloud_node.py  grasp_from_mask_node.py  grasp_node.py  grasp_pca_node.py  grasp_pos_node.py  ob_detection.py  ob_pose.py  obb_3d.py  test_grasp_compare.py  test_grasp_viz.py  yolo_node.py
perception/src/: cloud_to_map_node.cpp  ob_detection.py  ob_pose.py  ob_pose_service.cpp
perception/srv/: GetObPose.srv  GetObjectCloud.srv  GraspFromCloud.srv  GraspFromMask.srv  GraspPos.srv  PCAHeuristicGrasp.srv
simulation/gazebo/: CMakeLists.txt  package.xml  readme.md
simulation/gazebo/config/gazebo/: gz_bridge.yaml
simulation/gazebo/launch/: gzsim_omnibot.launch.py  manipulation_sim.launch.py  nav_gzsim_omnibot.launch.py  robot_state_publisher.launch.py  rviz.launch.py  world_preview_gz.launch.py
simulation/gazebo/models/aws_robomaker_residential_AirconditionerA_01/: model.sdf
simulation/gazebo/models/aws_robomaker_residential_AirconditionerB_01/: model.sdf
simulation/gazebo/models/aws_robomaker_residential_BalconyTable_01/: model.sdf
simulation/gazebo/models/aws_robomaker_residential_Ball_01/: model.sdf
simulation/gazebo/models/aws_robomaker_residential_Bed_01/: model.sdf
simulation/gazebo/models/aws_robomaker_residential_Board_01/: model.sdf
simulation/gazebo/models/aws_robomaker_residential_Carpet_01/: model.sdf
simulation/gazebo/models/aws_robomaker_residential_ChairA_01/: model.sdf
simulation/gazebo/models/aws_robomaker_residential_ChairD_01/: model.sdf
simulation/gazebo/models/aws_robomaker_residential_Chandelier_01/: model.sdf
simulation/gazebo/models/aws_robomaker_residential_CoffeeTable_01/: model.sdf
simulation/gazebo/models/aws_robomaker_residential_CookingBench_01/: model.sdf
simulation/gazebo/models/aws_robomaker_residential_Curtain_01/: model.sdf
simulation/gazebo/models/aws_robomaker_residential_DeskPortraitA_01/: model.sdf
simulation/gazebo/models/aws_robomaker_residential_DeskPortraitA_02/: model.sdf
simulation/gazebo/models/aws_robomaker_residential_DeskPortraitB_01/: model.sdf
simulation/gazebo/models/aws_robomaker_residential_DeskPortraitB_02/: model.sdf
simulation/gazebo/models/aws_robomaker_residential_DeskPortraitC_01/: model.sdf
simulation/gazebo/models/aws_robomaker_residential_DeskPortraitC_02/: model.sdf
simulation/gazebo/models/aws_robomaker_residential_DeskPortraitD_01/: model.sdf
simulation/gazebo/models/aws_robomaker_residential_DeskPortraitD_02/: model.sdf
simulation/gazebo/models/aws_robomaker_residential_DeskPortraitD_03/: model.sdf
simulation/gazebo/models/aws_robomaker_residential_DeskPortraitD_04/: model.sdf
simulation/gazebo/models/manipulation_table/: model.config  (+1 more)
simulation/gazebo/rviz/: display.rviz  turtlebot3_rviz.rviz
simulation/gazebo/worlds/: PlainWorld.world  aws_small_house.world  manipulation_test.world  obstacle_gz.world  turtlebot3_world_gz.world
tools/keyboard_teleop/: CMakeLists.txt  package.xml
tools/keyboard_teleop/launch/: keyboard_teleop.launch.py
tools/keyboard_teleop/src/: walkie_keyboard_input.cpp
(+271 files in other folders)
