<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.0.0</version>
  <description>just bringup hardware for walkie</description>
  <maintainer email="armmy2530@todo.todo">armmy2530</maintainer>
  <license>TODO: License declaration</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>std_msgs</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>omni_wheel_drive_controller</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>twist_stamper</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
