[project]
name = "robot-bringup-pyenv"
version = "0.0.1"
description = "Python runtime deps for robot_bringup nodes (TMotor bridge). Uses --system-site-packages so rclpy from /opt/ros stays visible."
requires-python = ">=3.12,<3.13"
dependencies = [
    "TMotorCANControl",
    "python-can>=4.0.0",
    "numpy",
    "pyserial>=3.5",
]

[tool.uv]
# Required so the .venv can still import rclpy / sensor_msgs / std_msgs from /opt/ros/jazzy.
# Re-create the venv with `uv venv --python python3.12 --system-site-packages` before `uv sync`.

[tool.uv.sources]
TMotorCANControl = { path = "/home/ryu/TMotorCANControl", editable = true }
