<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_description</name>
  <version>0.0.1</version>
  <description>The arm_description package</description>
  <maintainer email="ryu49th@gmail.com">Ryu</maintainer>
  <license>Apache License 2.0</license>
  <author email="ryu49th@gmail.com">Ryu</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>xacro</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
