<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_simulation</name>
  <version>0.0.2</version>
  <description>robot simulation launch and world package</description>
  <maintainer email="sutigran2557@gmail.com">Armmy2530</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>omni_wheel_drive_controller</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>twist_stamper</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>
  <exec_depend>rosbridge_suite</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <launch/>
  </export>
</package>
